--- a/SIPElectiveStudyGrpA/pom.xml
+++ b/SIPElectiveStudyGrpA/pom.xml
@@ -12,7 +12,19 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    </properties>   
+    <!--repositories>
+        <repository>
+            <id>maven2-repository.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>forplay-legacy</id>
+            <url>http://forplay.googlecode.com/svn/mavenrepo</url>
+        </repository>
+    </repositories-->
     
     <dependencies>
         <dependency>
@@ -28,10 +40,30 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>1.8</version>
+        </dependency>
+        <dependency> 
+            <groupId>com.jayway.restassured</groupId> 
+            <artifactId>rest-assured</artifactId> 
+            <version>2.3.4</version> 
+        </dependency> 
+        <dependency> 
+            <groupId>org.codehaus.groovy</groupId> 
+            <artifactId>groovy-all</artifactId> 
+            <version>2.3.5</version> 
         </dependency>
     </dependencies>
 
@@ -94,6 +126,16 @@
                       </goals>
                   </execution>
               </executions>
+          </plugin>
+          <plugin>
+              <groupId>>org.apache.tomcat.maven</groupId>
+              <artifactId>tomcat7-maven-plugin</artifactId>
+              <version>
+                  2.3-SNAPSHOT
+              </version>
+              <configuration>
+                  <path>/mycontext</path>
+              </configuration>
           </plugin>
         </plugins>
     </build>
