--- a/SIPElectiveStudyGrpA/pom.xml
+++ b/SIPElectiveStudyGrpA/pom.xml
@@ -9,61 +9,34 @@
 
     <name>SIPElectiveStudyGrpA</name>
 
-    <properties>
+   <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>   
-    <!--repositories>
-        <repository>
-            <id>maven2-repository.java.net</id>
-            <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>forplay-legacy</id>
-            <url>http://forplay.googlecode.com/svn/mavenrepo</url>
-        </repository>
-    </repositories-->
+    </properties>
     
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.7.5.201505241946</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
         <dependency>
+            <groupId>org.jmock</groupId>
+            <artifactId>jmock-junit4</artifactId>
+            <version>2.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>2.5.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>1.8</version>
-        </dependency>
-        <dependency> 
-            <groupId>com.jayway.restassured</groupId> 
-            <artifactId>rest-assured</artifactId> 
-            <version>2.3.4</version> 
-        </dependency> 
-        <dependency> 
-            <groupId>org.codehaus.groovy</groupId> 
-            <artifactId>groovy-all</artifactId> 
-            <version>2.3.5</version> 
         </dependency>
     </dependencies>
 
@@ -114,29 +87,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-              <groupId>org.jacoco</groupId>
-              <artifactId>jacoco-maven-plugin</artifactId>
-              <version>0.7.5.201505241946</version>
-              <executions>
-                  <execution>
-                      <goals>
-                          <goal>prepare-agent</goal>
-                          <goal>report</goal>
-                      </goals>
-                  </execution>
-              </executions>
-          </plugin>
-          <plugin>
-              <groupId>>org.apache.tomcat.maven</groupId>
-              <artifactId>tomcat7-maven-plugin</artifactId>
-              <version>
-                  2.3-SNAPSHOT
-              </version>
-              <configuration>
-                  <path>/mycontext</path>
-              </configuration>
-          </plugin>
         </plugins>
     </build>
 
